--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,15 @@ Title: Inflation Adjustment for Historical Currency Values
 Version: 0.1.0
 Authors@R: person("Charles", "Coverdale", email = "charlescoverdale@gmail.com", role = c("aut", "cre"))
 Description: Convert historical monetary values into their present-day equivalents
-    using bundled CPI (Consumer Price Index) data. Supports British pounds (GBP),
-    Australian dollars (AUD), US dollars (USD), Euro (EUR), Canadian dollars (CAD),
-    Japanese yen (JPY), and Chinese yuan (CNY).
+    using bundled CPI (Consumer Price Index) data sourced from the World Bank
+    Development Indicators. Supports British pounds (GBP), Australian dollars (AUD),
+    US dollars (USD), Euro (EUR), Canadian dollars (CAD), Japanese yen (JPY),
+    Chinese yuan (CNY), and Swiss francs (CHF). Currency codes and country names
+    are both accepted as input.
 License: MIT + file LICENSE
 Encoding: UTF-8
+URL: https://github.com/charlescoverdale/inflateR
+BugReports: https://github.com/charlescoverdale/inflateR/issues
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LazyData: true
