--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: inflateR
 Title: Inflation Adjustment for Historical Currency Values
 Version: 0.1.0
-Authors@R: person("Charles", "Coverdale", email = "charlescoverdale@gmail.com", role = c("aut", "cre"))
+Authors@R: person("Charles", "Coverdale", email = "charlesfcoverdale@gmail.com", role = c("aut", "cre"))
 Description: Convert historical monetary values into their present-day equivalents
     using bundled CPI (Consumer Price Index) data sourced from the World Bank
     Development Indicators. Supports British pounds (GBP), Australian dollars (AUD),
