--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: inflateR
 Title: Inflation Adjustment for Historical Currency Values
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: person("Charles", "Coverdale", email = "charlesfcoverdale@gmail.com", role = c("aut", "cre"))
 Description: Convert historical monetary values into their present-day equivalents
     using bundled CPI (Consumer Price Index) data sourced from the World Bank
@@ -10,6 +10,7 @@ Description: Convert historical monetary values into their present-day equivalen
     are both accepted as input.
 License: MIT + file LICENSE
 Encoding: UTF-8
+Language: en-US
 URL: https://github.com/charlescoverdale/inflateR
 BugReports: https://github.com/charlescoverdale/inflateR/issues
 Roxygen: list(markdown = TRUE)
